<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.destrostudios.cards</groupId>
    <artifactId>main</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <modules>
        <module>backend</module>
        <module>frontend</module>
        <module>shared</module>
        <module>test</module>
        <module>tools</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.card-gui>9b585d646c0f9889fffd3d25e218988edfb6ab9a</version.card-gui>
        <version.game-tools>76bd23e029824acdbf2596f2030a95a48beeefbb</version.game-tools>
        <version.groovy>3.0.22</version.groovy>
        <version.jackson>2.17.2</version.jackson>
        <version.javax.activation>1.1.1</version.javax.activation>
        <version.jaxb>2.3.1</version.jaxb>
        <version.jexl>3.2.1</version.jexl>
        <version.jme>3.6.1-stable</version.jme>
        <version.junit>5.10.3</version.junit>
        <version.lemur>1.16.0</version.lemur>
        <version.lemur-proto>1.13.0</version.lemur-proto>
        <version.lombok>1.18.34</version.lombok>
        <version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
        <version.maven-surefire-plugin>3.3.1</version.maven-surefire-plugin>
        <version.mockito>5.12.0</version.mockito>
        <version.mysql>8.0.33</version.mysql>
    </properties>
    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <!--JEXL-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-jexl3</artifactId>
                <version>${version.jexl}</version>
            </dependency>
            <!--Jackson-->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${version.jackson}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${version.jackson}</version>
            </dependency>
            <!--Lombok-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${version.lombok}</version>
                <scope>provided</scope>
            </dependency>
            <!--JAXB-->
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${version.jaxb}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${version.jaxb}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${version.jaxb}</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>${version.javax.activation}</version>
            </dependency>
            <!--MySQL-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${version.mysql}</version>
            </dependency>
            <!--jME-->
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-core</artifactId>
                <version>${version.jme}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-lwjgl3</artifactId>
                <version>${version.jme}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-desktop</artifactId>
                <version>${version.jme}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-effects</artifactId>
                <version>${version.jme}</version>
            </dependency>
            <dependency>
                <groupId>org.jmonkeyengine</groupId>
                <artifactId>jme3-terrain</artifactId>
                <version>${version.jme}</version>
            </dependency>
            <!--JUnit-->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${version.junit}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${version.junit}</version>
                <scope>test</scope>
            </dependency>
            <!--Mockito-->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${version.mockito}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven-compiler-plugin}</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.maven-surefire-plugin}</version>
                <configuration>
                    <workingDirectory>${session.executionRootDirectory}/backend/backend-application/workspace</workingDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
